# transformers_hf

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
chapter_2_text_classification/: implementation.ipynb  my_file.csv  notes.md
chapter_3_transformer_architecture/: implementation.ipynb
hugging-face/: custom-tokenizer.ipynb  datasets.ipynb  explore-gpt.ipynb  using-tokenizer-and-model.ipynb
